--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,10 @@ spring:
     allow-bean-definition-overriding: true
 
   ai:
-    alibaba:
-      dashscope:
-        chat:
-          option:
-            model: qwen_plus
-        api-key: YOUR_API_KEY
+    dashscope:
+      api-key: YOUR_API_KEY
+      chat:
+        model: qwen_plus
 
     ollama:
       base-url: http://localhost:11434
@@ -19,7 +17,7 @@ spring:
         model: gemma3:1b
 
 server:
-  port: 8123
+  port: 8124
   servlet:
     context-path: /api
 
@@ -40,3 +38,13 @@ knife4j:
   enable: true
   setting:
     language: zh_cn
+
+logging:
+  level:
+    org:
+      springframework:
+        ai:
+          chat:
+            client:
+              advisor:
+                SimpleLoggerAdvisor: DEBUG
