--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -47,4 +47,4 @@ logging:
           chat:
             client:
               advisor:
-                SimpleLoggerAdvisor: DEBUG
+                SimpleLoggerAdvisor: INFO #OR DEBUG
