--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,12 @@
 
         </dependency>
 
+        <dependency>
+            <groupId>com.github.victools</groupId>
+            <artifactId>jsonschema-generator</artifactId>
+            <version>4.38.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
