--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,22 @@
             <version>1.0.0-M6</version>
         </dependency>
 
+<!--        database dependency -->
+
+        <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-jdbc</artifactId>
+        </dependency>
+        <dependency>
+                <groupId>org.postgresql</groupId>
+                <artifactId>postgresql</artifactId>
+        </dependency>
+
+        <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-pgvector-store</artifactId>
+                <version>1.0.0-M6</version>
+        </dependency>
 
     </dependencies>
 
