--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,11 @@ spring:
   main:
     allow-bean-definition-overriding: true
 
+  datasource:
+    url : jdbc:postgresql://pgm-bp1zl45ugwt258pnlo.rwlb.rds.aliyuncs.com:5432/yu_ai_agent
+    username : yu_ai_agent
+    password : Thomas2701aung$
+
   ai:
     dashscope:
       api-key: YOUR_API_KEY
@@ -15,6 +20,15 @@ spring:
       base-url: http://localhost:11434
       chat:
         model: gemma3:1b
+
+    vectorstore:
+      pgvector:
+        index-type: HNSW
+        distance-type: COSINE_DISTANCE
+        dimensions: 1536
+        max-document-batch-size: 10000 # Optional: Maximum number of documents per batch
+
+
 
 server:
   port: 8124
