--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,9 +6,9 @@ spring:
     allow-bean-definition-overriding: true
 
   datasource:
-    url : jdbc:postgresql://pgm-bp1zl45ugwt258pnlo.rwlb.rds.aliyuncs.com:5432/yu_ai_agent
-    username : yu_ai_agent
-    password : Thomas2701aung$
+    url : YOUR_DATABASE_URL
+    username : YOUR_DATABASE_USERNAME
+    password : YOUR_DATABASE_PW
 
   ai:
     dashscope:
