--- a/pom.xml
+++ b/pom.xml
@@ -115,6 +115,28 @@
                 <artifactId>spring-ai-pgvector-store</artifactId>
                 <version>1.0.0-M6</version>
         </dependency>
+<!--        网页解析-->
+        <dependency>
+                <groupId>org.jsoup</groupId>
+                <artifactId>jsoup</artifactId>
+                <version>1.18.3</version>
+        </dependency>
+
+        <dependency>
+                <groupId>com.itextpdf</groupId>
+                <artifactId>itext-core</artifactId>
+                <version>8.0.5</version>
+        </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>font-asian</artifactId>
+            <version>8.0.5</version>
+        </dependency>
+        <dependency>
+                <groupId>org.springframework.ai</groupId>
+                <artifactId>spring-ai-mcp-client-spring-boot-starter</artifactId>
+                <version>1.0.0-M6</version>
+        </dependency>
 
     </dependencies>
 
