--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,20 +2,13 @@ spring:
   application:
     name : yu-ai-agent
 
+  profiles :
+    active : local
+
   main:
     allow-bean-definition-overriding: true
 
-  datasource:
-    url : YOUR_DATABASE_URL
-    username : YOUR_DATABASE_USERNAME
-    password : YOUR_DATABASE_PW
-
   ai:
-    dashscope:
-      api-key: YOUR_API_KEY
-      chat:
-        model: qwen_plus
-
     ollama:
       base-url: http://localhost:11434
       chat:
@@ -28,7 +21,22 @@ spring:
         dimensions: 1536
         max-document-batch-size: 10000 # Optional: Maximum number of documents per batch
 
-
+    mcp:
+      client:
+        enabled: true
+        name: my-mcp
+        version: 1.0.0
+        request-timeout: 30s
+        type: SYNC
+        sse:
+          connection:
+            server1:
+              url: http://localhost:8127
+#        stdio:
+#          connection:
+#            server1:
+#              command: java -jar /Users/aunglinn/Downloads/ollama-1.0.0.jar
+#          servers-configuration: classpath:mcp-servers.json
 
 server:
   port: 8124
