--- a/pom.xml
+++ b/pom.xml
@@ -123,15 +123,19 @@
         </dependency>
 
         <dependency>
-                <groupId>com.itextpdf</groupId>
-                <artifactId>itext-core</artifactId>
-                <version>8.0.5</version>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext-core</artifactId>
+            <version>9.1.0</version>
+            <type>pom</type>
         </dependency>
+
         <dependency>
             <groupId>com.itextpdf</groupId>
             <artifactId>font-asian</artifactId>
-            <version>8.0.5</version>
+            <version>9.1.0</version>
+            <type>pom</type>
         </dependency>
+
         <dependency>
                 <groupId>org.springframework.ai</groupId>
                 <artifactId>spring-ai-mcp-client-spring-boot-starter</artifactId>
@@ -150,7 +154,6 @@
                         <path>
                             <groupId>org.projectlombok</groupId>
                             <artifactId>lombok</artifactId>
-                            <version>1.18.38</version>
                         </path>
                     </annotationProcessorPaths>
                 </configuration>
