--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ spring:
     name : yu-ai-agent
 
   profiles :
-    active : local
+    active : prod
 
   main:
     allow-bean-definition-overriding: true
@@ -23,19 +23,13 @@ spring:
 
     mcp:
       client:
-#        enabled: true
-#        name: my-mcp
-#        version: 1.0.0
-#        request-timeout: 30s
-#        type: SYNC
+
 #        sse:
 #          connections:
 #            server1:
 #              url: http://localhost:8127
         stdio:
-#          connection:
-#            server1:
-#              command: java -jar /Users/aunglinn/Downloads/ollama-1.0.0.jar
+
           servers-configuration: classpath:mcp-servers.json
 
 server:
